<resources>
    <string name="app_name">MyNetWork</string>
    <string name="title_posts">Posts</string>
    <string name="title_post">Post</string>
    <string name="title_events">Events</string>
    <string name="title_event">Event</string>
    <string name="title_users">Users</string>
    <string name="title_my_profile">My profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="in_out">Sign In/Sign Up</string>
    <string name="login">Login *</string>
    <string name="password">Password *</string>
    <string name="repeat_password">Repeat password *</string>
    <string name="user_name">Name *</string>
    <string name="error_login">Invalid username/password</string>
    <string name="error_auth">You are not authorized</string>
    <string name="error_repeat_password">Password mismatch</string>
    <string name="error_loading">Loading error. Try again</string>
    <string name="error_play">No app to play</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_job">Job</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="error_required_fields">Fill in all required fields</string>
    <string name="liked">Liked</string>
    <string name="mention">Mention</string>
    <string name="retry_loading">Retry</string>
    <string name="description_photo">Photo</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="save">Save</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_speaker">Pick speaker</string>
    <string name="participate">Participate</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="company_name">Company name *</string>
    <string name="position">Position *</string>
    <string name="my_position">Position:</string>
    <string name="start">Start *</string>
    <string name="finish">Finish</string>
    <string name="company">Company:</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="now">now</string>
    <string name="empty_list">The list is empty</string>
    <string name="empty_like_owners">No one liked the post</string>
    <string name="empty_mentions">No marked users</string>
    <string name="empty_participants">No participants</string>
    <string name="empty_speakers">No speakers</string>
    <string name="link">Link</string>
    <string name="permission_deny">You do not have access to your location</string>
    <string name="retry">Try again</string>
    <string name="set_geo_label">Set geolabel</string>/>
    <string name="map">Map</string>/>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>