<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/navigation_posts">
    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.example.mynetwork.ui.PostsFragment"
        android:label="@string/title_posts"
        tools:layout="@layout/fragment_posts"/>
    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.mynetwork.ui.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events"/>
    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.mynetwork.ui.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users"/>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.mynetwork.ui.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_appActivity"
            app:destination="@id/appActivity" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.mynetwork.ui.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_appActivity"
            app:destination="@id/appActivity" />
        <action
            android:id="@+id/action_signUpFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <activity
        android:id="@+id/appActivity"
        android:name="com.example.mynetwork.ui.AppActivity"
        android:label="AppActivity" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.mynetwork.ui.ProfileFragment"
        android:label="@string/title_my_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>