<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@string/company"
            android:layout_marginTop="@dimen/common_spacing"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Company" />

        <TextView
            android:id="@+id/position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="@dimen/common_spacing"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Position" />

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@string/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/position"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Start" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@string/to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/position"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Finish" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_size_button"
            android:minWidth="@dimen/min_size_button"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name"
            app:layout_constraintBottom_toBottomOf="@id/name"
            android:text="Button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>